# creddedupe

./: .coveragerc  .gitignore  CredDedupe.spec  README.md  noxfile.py  pyproject.toml  pytest.ini  run_creddedupe_gui.py  run_proton_dedupe_gui.py
.github/workflows/: build_gui_windows.yml
assets/: apple_passwords.csv  bitwarden.csv  chromium_browser.csv  creddedupe.xcf  dashlane.csv  firefox.csv  kaspersky.csv  lastpass.csv  nordpass.csv  protonpass.csv  roboform.csv
docs/: ATTRIBUTIONS.md  Cononical Internal Schema.md  Formats.md  RELEASE_TEMPLATE_experimental.md  TODO.md  TODO_Detection.md  TODO_Plugin_expansion.md  TODO_Plugin_system.md  Testing.md
src/cred_dedupe/: __init__.py  build_win.py  changelog.py  cli.py  cli_merge.py  core.py  dedupe.py  detection.py  gui.py  gui_app.py  merge.py  model.py  protonpass.py  temp_utils.py  utils.py
src/cred_dedupe/assets/: README.md
src/cred_dedupe/plugins/: __init__.py  apple_passwords_plugin.py  base.py  bitwarden_plugin.py  chromium_browser_plugin.py  dashlane_plugin.py  firefox_plugin.py  kaspersky_plugin.py  lastpass_plugin.py  nordpass_plugin.py  protonpass_plugin.py  provider_types.py  registry.py  roboform_plugin.py
tests/: test_build_win.py  test_changelog.py  test_cli_merge.py  test_core.py  test_dedupe_exact.py  test_detection.py  test_gui_app.py  test_merge_logic.py  test_plugins_bitwarden.py  test_plugins_lastpass.py  test_plugins_other_providers.py  test_plugins_protonpass.py
tools/: add_spdx_headers.py
