[project]
name = "creddedupe"
version = "1.0.2"
description = "Credential deduplication tool with a simple Qt6 GUI for cleaning password-manager CSV exports."
requires-python = ">=3.9"
authors = [
    { name = "Matthew Craig", email = "taggedzi.mpc@gmail.com" }
]
readme = "README.md"
dependencies = [
    "PyQt6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "nox>=2023.4.22",
    "pytest>=7.0",
    "pytest-cov>=4.1.0",
    "coverage[toml]>=7.4.0",
    "ruff>=0.5.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
creddedupe = "cred_dedupe.gui:main"
creddedupe-cli = "cred_dedupe.core:main"
creddedupe-build-win = "cred_dedupe.build_win:main"
creddedupe-gui = "cred_dedupe.gui_app:run_gui"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
cred_dedupe = ["assets/*.ico"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cred_dedupe*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]
